# CineJENSE

./: .gitignore  LICENSE  README.md  pyproject.toml  run_inference.py
src/: CineJENSE2Dt.py  losses.py  utils.py
